[gd_scene load_steps=4 format=3 uid="uid://bnmbto4ueo0gd"]

[ext_resource type="Texture2D" uid="uid://by81cue5j5d7k" path="res://icon.svg" id="1_mkywo"]
[ext_resource type="Script" path="res://scenes/dialogue.gd" id="1_y6b1v"]
[ext_resource type="Texture2D" uid="uid://c2boackv3wd4y" path="res://resources/textures/terrible_border.png" id="2_d6arx"]

[node name="Dialogue" type="Node2D"]
script = ExtResource("1_y6b1v")

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(579, 232)
texture = ExtResource("1_mkywo")

[node name="Label" type="Label" parent="."]
offset_left = 133.0
offset_top = 352.0
offset_right = 425.0
offset_bottom = 406.0
theme_override_font_sizes/font_size = 30
text = "CHARACTER NAME
"

[node name="Option3" type="TextureButton" parent="."]
offset_left = 120.0
offset_top = 420.0
offset_right = 1070.0
offset_bottom = 480.0
texture_normal = ExtResource("2_d6arx")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Option3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Option2" type="TextureButton" parent="."]
offset_left = 120.0
offset_top = 553.0
offset_right = 1070.0
offset_bottom = 613.0
texture_normal = ExtResource("2_d6arx")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Option2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Option1" type="TextureButton" parent="."]
offset_left = 120.0
offset_top = 488.0
offset_right = 1070.0
offset_bottom = 548.0
texture_normal = ExtResource("2_d6arx")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Option1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Option1" to="." method="_on_option_1_pressed"]
